crates/edgezero-macros/tests/ui/secret_on_non_scalar.stderr
error: `#[secret]` may only annotate `String` or `Option<String>`
 --> tests/ui/secret_on_non_scalar.rs:7:17
  |
7 |     api_tokens: Vec<String>,
  |                 ^^^^^^^^^^^
